images on mobile were fixed

--- a/src/styles/blocks/contact-us.scss
+++ b/src/styles/blocks/contact-us.scss
@@ -35,5 +35,11 @@
     font-size: 16px;
     line-height: 140%;
     color: #fff;
+
+    transition: color 0.3s;
+
+    &:hover {
+      color: #bebebe;
+    }
   }
 }
